--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.1.1",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-firebase-recaptcha": "~2.3.1",
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3"
