--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-masked-view/masked-view": "0.2.8",
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
@@ -16,6 +17,7 @@
     "expo-asset": "~8.7.0",
     "expo-constants": "~14.0.2",
     "expo-contacts": "~11.0.1",
+    "expo-firebase-recaptcha": "~2.3.1",
     "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "firebase": "^9.1.3",
@@ -37,7 +39,6 @@
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.18.7",
-    "expo-firebase-recaptcha": "~2.3.1",
     "react-native-webview": "11.23.1"
   },
   "devDependencies": {
