--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-image-viewing": "^0.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "6.0.1",
+    "react-native-picker-select": "^8.0.4",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-tab-view": "^3.1.1",
